<resources>
    <string name="app_name">Co Dla Dzieci</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_overview">Overview</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="przegladaj">Przeglądaj</string>
    <string name="szukaj">Szukaj</string>
    <string name="ulubione">Ulubione</string>
    <string name="biblioteka">Biblioteka</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="brak_danych">brak</string>
    <string name="name">NAME</string>
    <string name="Uzupełnij_pole">Uzupełnij pole</string>
</resources>
