<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/przegladaj" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/szukaj" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/ulubione" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/biblioteka" />

</menu>
